# asistent_cod_rutier

./: .gitignore  docker-compose.yml  ingest_pipeline.md
python-rag-service/: .gitignore  Dockerfile  alembic.ini  debug_import.py  full_backend_context.py  generate_skeleton.py  main.py  pyproject.toml  requirements.txt  run_ingestion.py  test_enricher.py
python-rag-service/alembic/: env.py
python-rag-service/app/api/: dependencies.py
python-rag-service/app/clients/: llm_gateway.py
python-rag-service/app/core/: ai_registry.py  config.py  custom_types.py  worker_app.py
python-rag-service/app/db/: __init__.py  graph.py  models.py  queue.py  repository.py  session.py  vector.py
python-rag-service/app/pipeline/ingestion/: __init__.py  enricher.py  parser.py  tasks.py
python-rag-service/app/pipeline/ingestion/graph/: clustering.py  orchestrator.py
python-rag-service/app/schemas/: graph.py  law_unit.py  retrieval.py
python-rag-service/cli/: ingest.py  main.py  system.py  utils.py  wipe.py
python-rag-service/data/rawer_text/: capitolul2.txt  capitolul3.txt
python-rag-service/src/app/api/: dependencies.py
python-rag-service/src/app/clients/: llm_gateway.py
python-rag-service/src/app/core/: ai_registry.py  config.py  patterns.py  worker_app.py
python-rag-service/src/app/db/: graph.py  models.py  repository.py  session.py  vector.py
python-rag-service/src/app/schemas/: graph.py  law_unit.py  retrieval.py
python-rag-service/src/cli/: ingest.py  main.py  search.py  system.py  wipe.py
python-rag-service/tests/: test_ingestion_pipeline.py
(+18 files in other folders)
