[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-backend"
version = "0.1.0"
description = "Optimised Romanian Traffic Code RAG"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*", "cli*"]

[project.scripts]
rag-cli = "cli.main:run"